--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
 
     <header>
         <div class="container">
-            <h1><span class="big-word">Mirko & Elena</span></h1>
+            <h1><span class="big-word">Mirko & Elena</span><br><br><br><br><br><br></h1>
         </div>
     </header>
 
