--- a/index.html
+++ b/index.html
@@ -453,9 +453,9 @@
 
         <section id="regalo-nozze">
             <h3>il nostro sogno Americano...</h3>
-            <p style="text-align: center;"><strong></strong>Il regalo più bello sarà avervi con noi…<br> ma se volete aiutarci a inseguire il nostro sogno<br>una spintarella verso la West Coast sarà più che apprezzata!<br>
+            <p style="text-align: center;"><strong>Il regalo più bello sarà avervi con noi…<br> ma se volete aiutarci a inseguire il nostro sogno<br>una spintarella verso la West Coast sarà più che apprezzata!<br>
             Tra canyon mozzafiato, strade infinite e hamburger giganti, il vostro pensiero ci accompagnerà lungo ogni miglio.<br>
-            Qui sotto trovate il nostro IBAN, nascosto con grazia ma senza troppa vergogna.</p>strong> 😉</p>
+            Qui sotto trovate il nostro IBAN, nascosto con grazia ma senza troppa vergogna.</strong>strong> 😉</p>
             <p style="text-align:center;"><strong>IBAN: IT26P080163532100000639848</strong></p>
             <p style="text-align:center;">Causale: Viaggio di nozze Mirko & Elena</p>
         </section>
