--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             text-align: center;
             border-radius: 0 0 15px 15px;
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-            min-height: 350px; /* Altezza minima per mobile, aumentata */
+            min-height: 550px; /* Altezza minima per mobile, aumentata */
             display: flex;
             align-items: center;
             justify-content: center;
@@ -457,7 +457,7 @@
             Tra canyon mozzafiato, strade infinite e hamburger giganti, il vostro pensiero ci accompagnerà lungo ogni miglio.<br>
             Qui sotto trovate il nostro IBAN, nascosto con grazia ma senza troppa vergogna.</strong>strong> 😉</p>
             <p style="text-align:center;"><strong>IBAN: IT26P080163532100000639848</strong></p>
-            <p style="text-align:center;">Causale: Viaggio di nozze Mirko & Elena</p>
+            <p style="text-align:center;"><strong>Causale: Viaggio di nozze Mirko & Elena</strong></p>
         </section>
 
         <div id="rsvp-button-container">
