--- a/index.html
+++ b/index.html
@@ -131,7 +131,6 @@
         }
           /* Stili specifici per il testo all'interno della sezione regalo-nozze */
         #regalo-nozze h3,
-        color: #B27777; /* Un grigio scuro o nero, per un ottimo contrasto con lo sfondo chiaro dell'overlay */
         #regalo-nozze p,
         #regalo-nozze strong {
             color: #4A4A4A; /* Un grigio scuro o nero, per un ottimo contrasto con lo sfondo chiaro dell'overlay */
@@ -463,7 +462,7 @@
             <h3>il nostro sogno Americano...</h3>
             <p style="text-align: center;"><strong>Il regalo più bello sarà avervi con noi…<br> ma se volete aiutarci a inseguire il nostro sogno<br>una spintarella verso la West Coast sarà più che apprezzata!<br>
             Tra canyon mozzafiato, strade infinite e hamburger giganti, il vostro pensiero ci accompagnerà lungo ogni miglio.<br>
-            Qui sotto trovate il nostro IBAN, nascosto con grazia ma senza troppa vergogna.</strong>strong> 😉</p>
+            Qui sotto trovate il nostro IBAN, nascosto con grazia ma senza troppa vergogna.</strong> 😉</p>
             <p style="text-align:center;"><strong>IBAN: IT26P080163532100000639848</strong></p>
             <p style="text-align:center;"><strong>Causale:<br> Viaggio di nozze Mirko & Elena</strong></p>
         </section>
