--- a/index.html
+++ b/index.html
@@ -129,11 +129,23 @@
             border-radius: 15px; /* Applica lo stesso border-radius della sezione */
             z-index: -1; /* Metti l'overlay dietro il contenuto ma sopra l'immagine */
         }
-          /* Stili specifici per il testo all'interno della sezione regalo-nozze */
-        #regalo-nozze h3,
-        #regalo-nozze p,
+          /* Stili specifici per il TITOLO (h3) all'interno della sezione regalo-nozze */
+        #regalo-nozze h3 {
+            color: #b6C1ad; /* Il tuo colore originale per i titoli, o un altro che preferisci */
+            position: relative; /* Assicura che il testo sia sopra l'overlay */
+            z-index: 2;
+        }
+
+        /* Stili specifici per i PARAGRAFI (p) all'interno della sezione regalo-nozze */
+        #regalo-nozze p {
+            color: #b6C1ad; /* Un grigio scuro, per un buon contrasto con lo sfondo chiaro dell'overlay */
+            position: relative; /* Assicura che il testo sia sopra l'overlay */
+            z-index: 2;
+        }
+
+        /* Stili specifici per il TESTO IN GRASSETTO (strong) all'interno della sezione regalo-nozze */
         #regalo-nozze strong {
-            color: #4A4A4A; /* Un grigio scuro o nero, per un ottimo contrasto con lo sfondo chiaro dell'overlay */
+            color: #b6C1ad; /* Un colore ancora più scuro, quasi nero, per risaltare */
             position: relative; /* Assicura che il testo sia sopra l'overlay */
             z-index: 2;
         }
