--- a/index.html
+++ b/index.html
@@ -131,21 +131,21 @@
         }
           /* Stili specifici per il TITOLO (h3) all'interno della sezione regalo-nozze */
         #regalo-nozze h3 {
-            color: #b6C1ad; /* Il tuo colore originale per i titoli, o un altro che preferisci */
+            color: #B27777; /* Il tuo colore originale per i titoli, o un altro che preferisci */
             position: relative; /* Assicura che il testo sia sopra l'overlay */
             z-index: 2;
         }
 
         /* Stili specifici per i PARAGRAFI (p) all'interno della sezione regalo-nozze */
         #regalo-nozze p {
-            color: #b6C1ad; /* Un grigio scuro, per un buon contrasto con lo sfondo chiaro dell'overlay */
+            color: #28514E; /* Un grigio scuro, per un buon contrasto con lo sfondo chiaro dell'overlay */
             position: relative; /* Assicura che il testo sia sopra l'overlay */
             z-index: 2;
         }
 
         /* Stili specifici per il TESTO IN GRASSETTO (strong) all'interno della sezione regalo-nozze */
         #regalo-nozze strong {
-            color: #b6C1ad; /* Un colore ancora più scuro, quasi nero, per risaltare */
+            color: #28514E; /* Un colore ancora più scuro, quasi nero, per risaltare */
             position: relative; /* Assicura che il testo sia sopra l'overlay */
             z-index: 2;
         }
