--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         body {
             margin: 0;
             font-family: 'Montserrat', sans-serif;
-            background-color: #b6C1ad;
+            background-color: #7a9379;
             color: #B27777;
             line-height: 1.6;
             position: relative;
