--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
 
     <main>
         <section id="programma">
-            <h3>CI SPOSIAMO!! 🎉</h3>
+            <h3>CI SPOSIAMO!! 🥂</h3>
             <p>Sì, è tutto vero… </p>
             <p>Dopo 6423 giorni di Amore…<br> abbiamo deciso che è arrivato il momento di fare il grande passo<br>(con l’abito elegante e le scarpe scomode).</p>
             <p><span class="big-word"><strong>Siamo lieti di invitarvi<br>al nostro matrimonio</strong></span><br>❤️</p>
