--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
             align-items: center;
             justify-content: center;
             flex-direction: column;
+            max-width: 600px;
         }
 
         /* REGOLE PER IL TESTO "ELENA ❤️ MIRKO" CHE NON VADA A CAPO */
