--- a/index.html
+++ b/index.html
@@ -130,21 +130,21 @@
 
            /* Stili specifici per il TITOLO (h3) all'interno della sezione programma */
         #programma h3 {
-            color: #B27777; /* Colore originale per i titoli, o un altro che preferisci */
+            color: #28514E; /* Colore originale per i titoli, o un altro che preferisci */
             position: relative;
             z-index: 2;
         }
 
         /* Stili specifici per i PARAGRAFI (p) all'interno della sezione programma */
         #programma p {
-            color: #FFFFFF; /* Un grigio scuro per i paragrafi */
+            color: #28514E; /* Un grigio scuro per i paragrafi */
             position: relative;
             z-index: 2;
         }
 
         /* Stili specifici per il TESTO IN GRASSETTO (strong) all'interno della sezione programma */
         #programma strong {
-            color: #FFFFFF; /* Un colore ancora più scuro, quasi nero, per risaltare */
+            color: #28514E; /* Un colore ancora più scuro, quasi nero, per risaltare */
             position: relative;
             z-index: 2;
         }
