--- a/index.html
+++ b/index.html
@@ -503,15 +503,15 @@
     <main>
         <section id="programma">
             <h3>CI SPOSIAMO!! 🥂</h3>
-            <p>Sì, è tutto vero… </p>
-            <p>Dopo 6423 giorni di Amore…<br> abbiamo deciso che è arrivato il momento di fare il grande passo<br>(con l’abito elegante e le scarpe scomode).</p>
+            <p><strong>Sì, è tutto vero…</strong> </p>
+            <p><strong>Dopo 6423 giorni di Amore…<br> abbiamo deciso che è arrivato il momento di fare il grande passo<br>(con l’abito elegante e le scarpe scomode).</strong></p>
             <p><span class="big-word"><strong>Siamo lieti di invitarvi<br>al nostro matrimonio</strong></span><br>❤️</p>
-            <p>La cerimonia ed il ricevimento si svolgeranno </p>
+            <p><strong>La cerimonia ed il ricevimento si svolgeranno</strong> </p>
             <p><span class="big-word"><strong>Sabato 13 settembre 2025<br> alle ore 16.00</strong></span></p>
-            <p>presso </p>
+            <p><strong>presso</strong> </p>
             <p><span class="big-word"><strong>Du Lac et du Parc Grand Resort</strong></span></p>
-            <p>Riva del Garda<BR>(viale Rovereto, 44 - Riva del Garda)</p>
-            <p>Il conto alla rovescia è iniziato, e non vediamo l’ora di condividere con voi ogni istante di questa giornata speciale!</p>
+            <p><string>Riva del Garda<BR>(viale Rovereto, 44 - Riva del Garda)</string></p>
+            <p><string>Il conto alla rovescia è iniziato, e non vediamo l’ora di condividere con voi ogni istante di questa giornata speciale!</string></p>
         </section>
 
         <section id="regalo-nozze">
