--- a/index.html
+++ b/index.html
@@ -510,8 +510,8 @@
             <p><span class="big-word"><strong>Sabato 13 settembre 2025<br> alle ore 16.00</strong></span></p>
             <p><strong>presso</strong> </p>
             <p><span class="big-word"><strong>Du Lac et du Parc Grand Resort</strong></span></p>
-            <p><string>Riva del Garda<BR>(viale Rovereto, 44 - Riva del Garda)</string></p>
-            <p><string>Il conto alla rovescia è iniziato, e non vediamo l’ora di condividere con voi ogni istante di questa giornata speciale!</string></p>
+            <p><strong>Riva del Garda<BR>(viale Rovereto, 44 - Riva del Garda)</strong></p>
+            <p><strong>Il conto alla rovescia è iniziato, e non vediamo l’ora di condividere con voi ogni istante di questa giornata speciale!</strong></p>
         </section>
 
         <section id="regalo-nozze">
