--- a/index.html
+++ b/index.html
@@ -48,11 +48,12 @@
         }
 
         .container {
-            max-width: 960px;
+            max-width: 960px; /* Larghezza massima generale per il container */
             margin: 0 auto;
             padding: 20px;
         }
 
+        /* STILI AGGIORNATI PER L'HEADER */
         header {
             background-image: url('img/IMG-20240922-WA0011.jpg');
             background-size: cover;
@@ -62,13 +63,16 @@
             text-align: center;
             border-radius: 0 0 15px 15px;
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-            min-height: 550px; /* Altezza minima per mobile, aumentata */
+            min-height: 550px; /* Altezza minima per mobile */
             display: flex;
             align-items: center;
             justify-content: center;
             flex-direction: column;
-            max-width: 600px;
+            width: 90%; /* Nuova: Stessa larghezza delle sezioni */
+            max-width: 600px; /* Nuova: Stessa larghezza massima delle sezioni */
+            margin: 2rem auto; /* Nuova: Centra l'header e gli dà margini verticali */
         }
+        /* FINE STILI AGGIORNATI PER L'HEADER */
 
         /* REGOLE PER IL TESTO "ELENA ❤️ MIRKO" CHE NON VADA A CAPO */
         header h1 {
@@ -77,9 +81,9 @@
             color: #B27777;
             margin: 0;
             white-space: nowrap; /* Impedisce al testo di andare a capo */
-            overflow: hidden;     /* Nasconde il contenuto che eccede i bordi */
+            overflow: hidden;    /* Nasconde il contenuto che eccede i bordi */
             text-overflow: ellipsis; /* Aggiunge "..." se il testo viene tagliato (opzionale) */
-            padding-bottom: 2rem; /* Aggiungo padding qui invece dei <br> */
+            padding-bottom: 0; /* Rimuovi padding se il layout è gestito diversamente */
         }
 
         header h2 {
@@ -103,7 +107,6 @@
             display: none;
         }
 
-        /* Modificato: rimosso #gallery */
         #programma, #regalo-nozze, #rsvp-button-container {
             text-align: center;
         }
@@ -113,6 +116,9 @@
             background-size: cover;
             background-position: center center;
             background-repeat: no-repeat;
+            position: relative; /* Necessario per l'overlay */
+            z-index: 1; /* Assicurati che il contenuto sia sopra l'overlay */
+            padding: 2rem; /* Mantieni il padding esistente o aumentalo come preferisci */
         }
 
         /* Overlay semi-trasparente per migliorare la leggibilità del testo in #programma */
@@ -128,7 +134,7 @@
             z-index: -1; /* Metti l'overlay dietro il contenuto ma sopra l'immagine */
         }
 
-           /* Stili specifici per il TITOLO (h3) all'interno della sezione programma */
+            /* Stili specifici per il TITOLO (h3) all'interno della sezione programma */
         #programma h3 {
             color: #28514E; /* Colore originale per i titoli, o un altro che preferisci */
             position: relative;
@@ -148,9 +154,9 @@
             position: relative;
             z-index: 2;
         }
-        /* FINE STILI AGGIORNATI PER SFONDO SEZIONE PROGRAMMA E TESTO */
+/* FINE STILI AGGIORNATI PER SFONDO SEZIONE PROGRAMMA E TESTO */
         
-        /* INIZIO NUOVI STILI PER SFONDO SEZIONE REGALO NOZZE */
+/* INIZIO NUOVI STILI PER SFONDO SEZIONE REGALO NOZZE */
         #regalo-nozze {
             background-image: url('img/sfondo_regalo.jpg'); /* Sostituisci con il nome del tuo file immagine */
             background-size: cover; /* L'immagine coprirà l'intera area */
@@ -173,7 +179,7 @@
             border-radius: 15px; /* Applica lo stesso border-radius della sezione */
             z-index: -1; /* Metti l'overlay dietro il contenuto ma sopra l'immagine */
         }
-          /* Stili specifici per il TITOLO (h3) all'interno della sezione regalo-nozze */
+            /* Stili specifici per il TITOLO (h3) all'interno della sezione regalo-nozze */
         #regalo-nozze h3 {
             color: #B27777; /* Il tuo colore originale per i titoli, o un altro che preferisci */
             position: relative; /* Assicura che il testo sia sopra l'overlay */
@@ -193,7 +199,7 @@
             position: relative; /* Assicura che il testo sia sopra l'overlay */
             z-index: 2;
         }
-        /* FINE NUOVI STILI PER SFONDO SEZIONE REGALO NOZZE */
+/* FINE NUOVI STILI PER SFONDO SEZIONE REGALO NOZZE */
 
 
         #rsvp-button-container {
@@ -390,7 +396,7 @@
         /* --- Media Query per schermi desktop e tablet grandi (AUMENTA ALTEZZA HEADER) --- */
         @media screen and (min-width: 769px) {
             header {
-                min-height: 600px; /* Altezza maggiore per desktop/tablet, ulteriormente aumentata */
+                min-height: 600px; /* Altezza maggiore per desktop/tablet */
             }
         }
 
@@ -496,7 +502,7 @@
 
     <header>
         <div class="container">
-            <h1><span class="big-word">Mirko & Elena</span><br><br><br><br><br></h1>
+            <h1><span class="big-word">Mirko & Elena</span></h1>
         </div>
     </header>
 
