--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             background-repeat: no-repeat;
             padding: 2rem;
             text-align: center;
-            border-radius: 0 0 15px 15px;
+            border-radius: 15px 15px 15px 15px;
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
             min-height: 550px; /* Altezza minima per mobile */
             display: flex;
