--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background-color: rgba(255, 255, 255, 0.75); /* Bianco più trasparente, opacità 0.75 */
+            background-color: rgba(255, 255, 255, 1); /* Bianco più trasparente, opacità 0.75 */
             border-radius: 15px;
             z-index: -1; /* Metti l'overlay dietro il contenuto ma sopra l'immagine */
         }
@@ -502,7 +502,7 @@
 
     <header>
         <div class="container">
-            <h1><span class="big-word">Mirko & Elena</span></h1>
+            <h1><span class="big-word">Mirko & Elena<br><br><br><br></span></h1>
         </div>
     </header>
 
