--- a/index.html
+++ b/index.html
@@ -228,16 +228,16 @@
         }
 
         footer {
-            background-color: rgba(255, 255, 255, 0.9);
-            text-align: center;
-            padding: 0.8rem;
-            font-size: 0.9rem;
-            color: #B27777;
-            border-radius: 15px 15px 0 0;
-            margin-top: 0.5rem;
-            box-shadow: 0 -2px 8px rgba(0,0,0,0.1);
-            min-height: 10px;
-        }
+    background-color: rgba(255, 255, 255, 0.9);
+    text-align: center;
+    padding: 0.3rem 0;  /* meno spazio sopra e sotto */
+    font-size: 0.9rem;
+    color: #B27777;
+    border-radius: 15px 15px 0 0;
+    margin-top: 0.5rem;
+    box-shadow: 0 -2px 8px rgba(0,0,0,0.1);
+    min-height: 0; /* disattiva altezza minima */
+}
 
         form label {
             display: block;
