--- a/index.html
+++ b/index.html
@@ -227,17 +227,21 @@
             font-weight: bold;
         }
 
-        footer {
-    background-color: rgba(255, 255, 255, 0.9);
-    text-align: center;
-    padding: 0.1rem 0;  /* meno spazio sopra e sotto */
-    font-size: 0.9rem;
+        <footer style="
+    background-color: #ffffff;
     color: #B27777;
-    border-radius: 15px 15px 0 0;
-    margin-top: 0.5rem;
-    box-shadow: 0 -2px 8px rgba(0,0,0,0.1);
-    min-height: 10px; /* disattiva altezza minima */
-}
+    text-align: center;
+    padding: 2rem 1rem;
+    font-size: 0.9rem;
+    border-top: 1px solid #ddd;
+    margin-top: 3rem;
+    font-family: 'Montserrat', sans-serif;
+    width: 100%;
+    box-shadow: 0 -2px 6px rgba(0, 0, 0, 0.05);
+">
+    <p style="margin: 0;">Con amore, Mirko & Elena ❤️</p>
+    <p style="margin: 0; font-size: 0.8rem;">13 Settembre 2025 - Riva del Garda</p>
+</footer>
 
         form label {
             display: block;
@@ -491,6 +495,7 @@
                 display: flex; /* Mostra il messaggio per desktop */
             }
         }
+        
     </style>
 </head>
 <body>
