--- a/index.html
+++ b/index.html
@@ -228,18 +228,17 @@
         }
 
         <footer style="
-    background-color: #ffffff;
-    color: #B27777;
-    text-align: center;
-    padding: 2rem 1rem;
-    font-size: 0.9rem;
-    border-top: 1px solid #ddd;
-    margin-top: 3rem;
-    font-family: 'Montserrat', sans-serif;
+    position: sticky;
+    bottom: 0;
     width: 100%;
-    box-shadow: 0 -2px 6px rgba(0, 0, 0, 1);
-    <p style="margin: 0;">Con amore, Mirko & Elena ❤️</p>
-    <p style="margin: 0; font-size: 0.8rem;">13 Settembre 2025 - Riva del Garda</p>
+    background-color: rgba(255, 255, 255, 0.85); /* sfondo chiaro trasparente */
+    color: #28514E;
+    text-align: center;
+    padding: 10px 0;
+    font-size: 0.9rem;
+    border-top: 1px solid #ccc;
+">
+    <p style="margin: 0;">© 2025 Mirko & Elena – Tutti i diritti riservati</p>
 </footer>
 
         form label {
