--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 13/09/2025 Mirko & Elena</p>
+            <p>&copy; gggggg13/09/2025 Mirko & Elena</p>
         </div>
     </footer>
 
