--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
     bottom: 0;
     width: 100%;
     background-color: rgba(255, 255, 255, 0.85); /* sfondo chiaro trasparente */
-    color: #28514E;
+    color: #FFFFFF;
     text-align: center;
     padding: 10px 0;
     font-size: 0.9rem;
