--- a/index.html
+++ b/index.html
@@ -226,20 +226,16 @@
             font-size: 1.2em;
             font-weight: bold;
         }
-
-        <footer style="
-    position: sticky;
-    bottom: 0;
-    width: 100%;
-    background-color: rgba(255, 255, 255, 0.85); /* sfondo chiaro trasparente */
-    color: #FFFFFF;
-    text-align: center;
-    padding: 10px 0;
-    font-size: 0.9rem;
-    border-top: 1px solid #ccc;
-">
-    <p style="margin: 0;">© 2025 Mirko & Elena – Tutti i diritti riservati</p>
-</footer>
+footer {
+            background-color: rgba(255, 255, 255, 0.9);
+            text-align: center;
+            padding: 0.8rem;
+            font-size: 0.9rem;
+            color: #B27777;
+            border-radius: 15px 15px 0 0;
+            margin-top: 0.5rem;
+            box-shadow: 0 -2px 8px rgba(0,0,0,0.1);
+        }
 
         form label {
             display: block;
