--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@ footer {
             border: none;
             cursor: pointer;
             padding: 1.2rem 2.5rem; /* Aumentato il padding per renderlo più grande */
-            border-radius: 5px;
+            border-radius: 15px 15px 15px 15px;
             transition: background-color 0.3s ease, transform 0.2s ease;
             display: block;
             width: 100%;
@@ -560,7 +560,7 @@ footer {
 
     <footer>
         <div class="container">
-            <p>&copy; gggggg13/09/2025 Mirko & Elena</p>
+            <p>&copy; 13/09/2025 Mirko & Elena</p>
         </div>
     </footer>
 
