--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@ footer {
         .action-button {
             background-color: #B27777;
             color: white;
-            border: none;
+            border: 2px solid #FFFFFF; /* aggiunto bordo verde salvia */;
             cursor: pointer;
             padding: 1.2rem 2.5rem; /* Aumentato il padding per renderlo più grande */
             border-radius: 15px 15px 15px 15px;
