--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
             position: relative; /* Necessario per l'overlay */
             z-index: 1; /* Assicurati che il contenuto sia sopra l'overlay */
             padding: 2rem; /* Mantieni il padding esistente o aumentalo come preferisci */
+            height: 800px; /* Imposta l'altezza a 800 pixel */
         }
 
         /* Overlay semi-trasparente per migliorare la leggibilità del testo in #programma */
