--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
             /* Stili specifici per il TITOLO (h3) all'interno della sezione programma */
         #programma h3 {
             color: #28514E; /* Colore originale per i titoli, o un altro che preferisci */
+            text-align: right; /* <-- AGGIUNGI QUESTA RIGA */
             position: relative;
             z-index: 2;
         }
