--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@ footer {
 
     <main>
         <section id="programma">
-            <h3> class="align-right"><br><br><br>CI SPOSIAMO!! 🥂</h3>
+            <h3> <br><br><br>CI SPOSIAMO!! 🥂</h3>
             <p><strong>Sì, è tutto vero…</strong> </p>
             <p><strong>Dopo 6423 giorni di Amore…<br> abbiamo deciso che è arrivato il momento di fare il grande passo<br>(con l’abito elegante e le scarpe scomode).</strong></p>
             <p><span class="big-word"><strong>Siamo lieti di invitarvi<br>al nostro matrimonio</strong></span><br>❤️</p>
