--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
         #programma h3 {
             color: #28514E; /* Colore originale per i titoli, o un altro che preferisci */
             text-align: right; /* <-- AGGIUNGI QUESTA RIGA */
+            font-size: 2.0em;
             position: relative;
             z-index: 2;
         }
