--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         #programma h3 {
             color: #28514E; /* Colore originale per i titoli, o un altro che preferisci */
             text-align: right; /* <-- AGGIUNGI QUESTA RIGA */
-            font-size: 2.0em;
+            font-size: 0.5em;
             position: relative;
             z-index: 2;
         }
@@ -512,7 +512,7 @@ footer {
     <main>
         <section id="programma">
             <h3> CI SPOSIAMO!!</h3>
-            <p>🥂<br><strong>Sì, è tutto vero…</strong> </p>
+            <p><br><br>🥂<br><strong>Sì, è tutto vero…</strong> </p>
             <p><strong>Dopo 6423 giorni di Amore…<br> abbiamo deciso che è arrivato il momento di fare il grande passo<br>(con l’abito elegante e le scarpe scomode).</strong></p>
             <p><span class="big-word"><strong>Siamo lieti di invitarvi<br>al nostro matrimonio</strong></span><br>❤️</p>
             <p><strong>La cerimonia ed il ricevimento si svolgeranno</strong> </p>
