--- a/index.html
+++ b/index.html
@@ -511,8 +511,8 @@ footer {
 
     <main>
         <section id="programma">
-            <h3> <br>CI SPOSIAMO!!<br>🥂</h3>
-            <p><br><br><strong>Sì, è tutto vero…</strong> </p>
+            <h3> <br>CI SPOSIAMO!!</h3>
+            <p><strong>Sì, è tutto vero…</strong> </p>
             <p><strong>Dopo 6423 giorni di Amore…<br> abbiamo deciso che è arrivato il momento di fare il grande passo<br>(con l’abito elegante e le scarpe scomode).</strong></p>
             <p><span class="big-word"><strong>Siamo lieti di invitarvi<br>al nostro matrimonio</strong></span><br>❤️</p>
             <p><strong>La cerimonia ed il ricevimento si svolgeranno</strong> </p>
