--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             position: relative; /* Necessario per l'overlay */
             z-index: 1; /* Assicurati che il contenuto sia sopra l'overlay */
             padding: 2rem; /* Mantieni il padding esistente o aumentalo come preferisci */
-            height: 1100px; /* Imposta l'altezza a 800 pixel */
+            height: 900px; /* Imposta l'altezza a 800 pixel */
         }
 
         /* Overlay semi-trasparente per migliorare la leggibilità del testo in #programma */
@@ -511,12 +511,12 @@ footer {
 
     <main>
         <section id="programma">
-            <h3> <br>CI SPOSIAMO!!</h3>
-            <p><strong>Sì, è tutto vero…</strong> </p>
-            <p><strong>Dopo 6423 giorni di Amore…<br> abbiamo deciso che è arrivato il momento di fare il grande passo<br>(con l’abito elegante e le scarpe scomode).</strong></p>
+            <h3> <br>CI SPOSIAMO!</h3>
+            <p><br></r><strong>Sì, è tutto vero…</strong> </p>
+            <p><strong>Dopo 6423 giorni di Amore…<br> abbiamo deciso che è arrivato il momento di fare il Grande Passo</strong></p>
             <p><span class="big-word"><strong>Siamo lieti di invitarvi<br>al nostro matrimonio</strong></span><br>❤️</p>
             <p><strong>La cerimonia ed il ricevimento si svolgeranno</strong> </p>
-            <p><span class="big-word"><strong>Sabato 13 settembre 2025<br> alle ore 16.30</strong></span></p>
+            <p><span class="big-word"><strong>Sabato 13 settembre 2025<br> alle ore 16.00</strong></span></p>
             <p><strong>presso</strong> </p>
             <p><span class="big-word"><strong>Du Lac et du Parc Grand Resort</strong></span></p>
             <p><strong>Riva del Garda<BR>(viale Rovereto, 44 - Riva del Garda)</strong></p>
