--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
             /* Stili specifici per il TITOLO (h3) all'interno della sezione programma */
         #programma h3 {
-            color: #28514E; /* Colore originale per i titoli, o un altro che preferisci */
+            color: #7a9379; /* Colore originale per i titoli, o un altro che preferisci */
             text-align: right; /* <-- AGGIUNGI QUESTA RIGA */
             font-size: 1.2em;
             position: relative;
@@ -146,14 +146,14 @@
 
         /* Stili specifici per i PARAGRAFI (p) all'interno della sezione programma */
         #programma p {
-            color: #28514E; /* Un grigio scuro per i paragrafi */
+            color: #7a9379; /* Un grigio scuro per i paragrafi */
             position: relative;
             z-index: 2;
         }
 
         /* Stili specifici per il TESTO IN GRASSETTO (strong) all'interno della sezione programma */
         #programma strong {
-            color: #28514E; /* Un colore ancora più scuro, quasi nero, per risaltare */
+            color: #7a9379; /* Un colore ancora più scuro, quasi nero, per risaltare */
             position: relative;
             z-index: 2;
         }
