--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             z-index: 1; /* Assicurati che il contenuto sia sopra l'overlay */
             padding: 2rem; /* Mantieni il padding esistente o aumentalo come preferisci */
             height: 915px; /* Imposta l'altezza a 800 pixel */
-            width: 600px; /* AGGIUNGI ORA ANCHE QUESTA RIGA SE VUOI FISSARE LA LARGHEZZA */
+            width: 600; /* AGGIUNGI ORA ANCHE QUESTA RIGA SE VUOI FISSARE LA LARGHEZZA */
         }
 
         /* Overlay semi-trasparente per migliorare la leggibilità del testo in #programma */
