--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 /* INIZIO STILI AGGIORNATI PER SFONDO SEZIONE PROGRAMMA E TESTO */
         #programma {
             background-image: url('img/sfondo_programma.jpg'); /* Sostituisci con il nome del tuo file immagine */
-            background-size: cover;
+            background-size: contain;
             background-position: center center;
             background-repeat: no-repeat;
             position: relative; /* Necessario per l'overlay */
