--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
             position: relative; /* Necessario per l'overlay */
             z-index: 1; /* Assicurati che il contenuto sia sopra l'overlay */
             padding: 2rem; /* Mantieni il padding esistente o aumentalo come preferisci */
-            height: 900px; /* Imposta l'altezza a 800 pixel */
-            
+            height: 900px;
+            width: 100%;
         }
 
         /* Overlay semi-trasparente per migliorare la leggibilità del testo in #programma */
