--- a/index.html
+++ b/index.html
@@ -519,8 +519,8 @@ footer {
             <p><strong>La cerimonia ed il ricevimento si svolgeranno</strong> </p>
             <p><span class="big-word"><strong>Sabato 13 settembre 2025<br> alle ore 16.00</strong></span></p>
             <p><strong>presso</strong> </p>
-            <p><span class="big-word"><strong>Du Lac et du Parc Grand Resort</strong></span></p>
-            <p><strong>Riva del Garda</strong><BR>(viale Rovereto, 44 - Riva del Garda)</p>
+            <p><span class="big-word"><strong>Du Lac et du Parc<br>Grand Resort</strong></span></p>
+            <p>(viale Rovereto, 44 - Riva del Garda)</p>
             <p><strong>Il conto alla rovescia è iniziato, e non vediamo l’ora di condividere con voi ogni istante di questa giornata speciale!</strong></p>
         </section>
 
