--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@ footer {
             <p><br></r><strong>Sì, è tutto vero…</strong> </p>
             <p><strong>Dopo 6423 giorni di Amore…<br> abbiamo deciso che è arrivato il momento di fare il Grande Passo</strong></p>
             <p><span class="big-word"><strong>Siamo lieti di invitarvi<br>al nostro matrimonio</strong></span><br>❤️</p>
-            <p><strong>La cerimonia ed il ricevimento si svolgeranno</strong> </p>
+            <p><strong>Cerimonia e ricevimento si svolgeranno</strong> </p>
             <p><span class="big-word"><strong>Sabato 13 settembre 2025<br> alle ore 16.00</strong></span></p>
             <p><strong>presso</strong> </p>
             <p><span class="big-word"><strong>Du Lac et du Parc<br>Grand Resort</strong></span></p>
