--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@ footer {
 
         <section id="rsvp">
             <h3>Conferma la Tua Presenza</h3>
-            <p>Ti preghiamo di compilare il modulo seguente per confermare la tua presenza. Ti ringraziamo!</p>
+            <p>Ti preghiamo di compilare il modulo seguente per confermare la tua o la vostra presenza. Grazie!!</p>
 
             <form action="https://formspree.io/f/mrbqvjgn" method="POST">
                 <label for="full_name">Nome e Cognome:</label>
@@ -554,7 +554,7 @@ footer {
                 <label for="allergies">Allergie o intolleranze alimentari:</label>
                 <textarea id="allergies" name="Allergie_Intolleranze" rows="4" placeholder="Es. Celiachia, lattosio, frutta secca..."></textarea>
 
-                <label for="message">Note aggiuntive (es. preferenze menù per altri invitati, seggioloni, ecc.):</label>
+                <label for="message">Note aggiuntive:</label>
                 <textarea id="message" name="Note_Aggiuntive" rows="4" placeholder="Scrivi qui eventuali richieste speciali o dettagli aggiuntivi."></textarea>
 
                 <button type="submit" class="action-button">Invia conferma</button>
