--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@ footer {
 
             if (numGuests < 1) return;
 
-            const menuOptions = ['Carne', 'Pesce', 'Vegano', 'menù Bambini'];
+            const menuOptions = ['Carne/Pesce', 'Vegano', 'menù Bambini'];
 
             for (let i = 1; i <= numGuests; i++) {
                 const guestDiv = document.createElement('div');
