--- a/index.html
+++ b/index.html
@@ -539,8 +539,7 @@ footer {
 
         <section id="rsvp">
             <h3>Conferma la Tua Presenza</h3>
-            <p>Ti preghiamo di compilare il modulo seguente per confermare la tua o la vostra presenza. Grazie!!</p>
-
+            <p>Ti preghiamo di compilare il modulo seguente per confermare la tua o la vostra presenza<br>ti basterà indicare il tuo nome e indicare il numero di quanti invitati saranno presenti insieme a te<br>puoi scegliere la preferenza del menù ed indicarci eventuali intolleranze.<br>Grazie!!</p>
             <form action="https://formspree.io/f/mrbqvjgn" method="POST">
                 <label for="full_name">Nome e Cognome:</label>
                 <input type="text" id="full_name" name="Nome_Cognome" required placeholder="Es. Mario Rossi">
