--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@ footer {
 
         <section id="rsvp">
             <h3>Conferma la Tua Presenza</h3>
-            <p>Per permetterci di organizzare al meglio il ricevimento, ti chiediamo gentimente di segnalare eventuali intolleranze, allergie o preferenze alimentari (compilando il form sottostante. <br>Ti chiediamo di indicare il tuo nome il numero di persone che verranno al matrimonio con te.<br>Grazie!!</p>
+            <p>Per aiutarci a organizzare al meglio il ricevimento, ti chiediamo gentilmente di confermare la tua presenza e quella di chi sarà con te il giorno del nostro matrimonio.<br>Se lo desideri, puoi anche  segnalarci eventuali allergie, intolleranze o preferenze alimentari compilando il form qui sotto.<br>Grazie!!</p>
             <form action="https://formspree.io/f/mrbqvjgn" method="POST">
                 <label for="full_name">Nome e Cognome:</label>
                 <input type="text" id="full_name" name="Nome_Cognome" required placeholder="Es. Mario Rossi">
