--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@ footer {
             <p>Per aiutarci a organizzare al meglio il ricevimento, ti chiediamo gentilmente di confermare la tua presenza e quella di chi sarà con te il giorno del nostro matrimonio.<br>Se lo desideri, puoi anche  segnalarci eventuali allergie, intolleranze o preferenze alimentari compilando il form qui sotto.<br>Grazie!!</p>
             <form action="https://formspree.io/f/mrbqvjgn" method="POST">
                 <label for="full_name">Nome e Cognome:</label>
-                <input type="text" id="full_name" name="Nome_Cognome" required placeholder="Es. Mario Rossi">
+                <input type="text" id="full_name" name="Nome_Cognome" required placeholder="Es. Enzo Zucchelli">
 
                 <label for="num_guests">Numero di persone (incluso te):</label>
                 <input type="number" id="num_guests" name="Numero_Invitati" min="1" value="1" required>
@@ -575,7 +575,7 @@ footer {
 
             if (numGuests < 1) return;
 
-            const menuOptions = ['Carne/Pesce', 'Vegano', 'menù Bambini'];
+            const menuOptions = ['Menù Vegetariano', 'Menù Vegano', 'Menù Bambini'];
 
             for (let i = 1; i <= numGuests; i++) {
                 const guestDiv = document.createElement('div');
