--- a/index.html
+++ b/index.html
@@ -547,6 +547,9 @@ footer {
                 <label for="num_guests">Numero di persone (incluso te):</label>
                 <input type="number" id="num_guests" name="Numero_Invitati" min="1" value="1" required>
 
+                 <label for="allergies">Allergie o intolleranze alimentari:</label>
+                <textarea id="allergies" name="Allergie_Intolleranze" rows="4" placeholder="Es. Celiachia, lattosio, frutta secca..."></textarea>
+                
                 <div id="menuPreferencesContainer">
                 </div>
 
