--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@ footer {
         <section id="programma">
             <h3> <br>CI SPOSIAMO!</h3>
             <p><br></r><strong>Sì, è tutto vero…</strong> </p>
-            <p><strong>Dopo 6424 giorni continuiamo a sceglierci<br>(più o meno volontariamente)<br> che si amore o semplice ostinazione, poco importa<br>abbiamo deciso di festeggiarci comunque</strong></p>
+            <p><strong>Dopo 6424 giorni continuiamo a sceglierci<br>(più o meno volontariamente)<br> che sia amore o semplice ostinazione, poco importa<br>abbiamo deciso di festeggiarci comunque</strong></p>
             <p><span class="big-word"><strong>Siamo lieti di invitarvi<br>al nostro matrimonio</strong></span><br>❤️</p>
             <p><strong>Cerimonia e ricevimento<br>si terranno</strong> </p>
             <p><span class="big-word"><strong>Sabato 13 settembre 2025<br> alle ore 16.00</strong></span></p>
