--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@ footer {
 
             if (numGuests < 1) return;
 
-            const menuOptions = ['Menù Vegetariano', 'Menù Vegano', 'Menù Bambini'];
+            const menuOptions = ['Nessuna Preferenza', 'Menù Vegetariano', 'Menù Vegano', 'Menù Bambini'];
 
             for (let i = 1; i <= numGuests; i++) {
                 const guestDiv = document.createElement('div');
