--- a/index.html
+++ b/index.html
@@ -528,7 +528,8 @@ footer {
             <h3>Il nostro sogno Americano...</h3>
             <p style="text-align: center;"><strong><br>Il regalo più bello sarà avervi con noi…<br> ma se volete aiutarci ad inseguire il nostro sogno<br>una spintarella verso la West Coast sarà più che apprezzata!<br>
             Qui sotto trovate il nostro IBAN, nascosto con grazia ma senza troppa vergogna.</strong> 😉</p>
-            <p style="text-align:center;"><strong>IBAN: IT26P080163532100000639848</strong></p>
+            <p style="text-align:center;"><strong>IBAN: IT26P0801635321000006398481</strong></p>
+            <p style="text-align:center;"><strong>Intestato a: BERNARDINELLI ELENA ZUCCHELLI MIRKO</strong></p>
             <p style="text-align:center;"><strong>Causale:<br> Viaggio di nozze Mirko & Elena</strong></p>
         </section>
 
